[metadata]
name = ical
version = 4.5.0
description = Python iCalendar implementation (rfc 2445)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/allenporter/ical
author = Allen Porter
author_email = allen.porter@gmail.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
python_requires = >= 3.9
install_requires =
  python-dateutil>=2.8.2
  tzdata>=2022.1
  pydantic>=1.9.1
  pyparsing>=3.0.9
  emoji>=2.2.0
include_package_data = True
package_dir =
    = .

[options.packages.find]
where = .
exclude =
    tests
    tests.*

[options.package_data]
ical = py.typed

[flake8]
max-line-length = 88
ignore =
    E501,
    W503
